Logical OR operator

--- a/project2/index.html
+++ b/project2/index.html
@@ -23,9 +23,16 @@
 
     <h5>Example6:</h5>
     <p id="demo6"></p>
-    
+
     <h5>Example7:</h5>
     <p id="demo7"></p>
+
+    <h5>Example8:</h5>
+    <p id="demo8"></p>
+
+    <h5>Example9:</h5>
+    <p id="demo9"></p>
+
     <script src="script.js">
        
     </script>    
